cmake_minimum_required(VERSION 3.9)
project(STL)

set(CMAKE_CXX_STANDARD 11)
add_library(mystl alloc.h iterator.h type_traits.h construct.h uninitialized.h vector.h hello.cpp algobase.h list.h heap.h priority_queue.h)
#add_executable(test_all test/testall.cpp test/test.h test/vector_test.cpp)
#target_link_libraries(test_all mystl)
add_executable(test_vector  test/vector_test.cpp)
add_executable(test_list  test/list_test.cpp)
add_executable(test_heap  test/heap_test.cpp)
add_executable(test_priority_queue  test/priority_queue_test.cpp)
add_executable(test_algorithm test/algorithm_test.cpp)
target_link_libraries(test_vector mystl)
target_link_libraries(test_list mystl)
target_link_libraries(test_heap mystl)
target_link_libraries(test_priority_queue mystl)
target_link_libraries(test_algorithm mystl)